# Extended-STL-style-Containers

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Priority_Queue.h  README.md  Single_Linked_List.h  Sorted.h  Unsorted.h  main.cc
.github/workflows/: .yml  cpp-ci.yml  docker-build.yml
Array/: Array.h  Reverse.h  Sorted.h  Unsorted.h  algorithms.h  main.cc
Single_Linked_List/: Get_Size.h  Insert.h  Search.h  Single_Linked_List.h  main.cc
Stack/: Stack.h  main.cc
datastructure/: Array.h  Default_Value.h  Doubly_Linked_List.h  Priority_Queue.h  Queue.h  Single_Linked_List.h  Singly_Linked_List.h  Stack.h
modules/: concepts.cppm  j.cppm  memory.cppm  traits.cppm  unique_ptr.cppm
modules/algorithms/: algorithm.cppm  heap_algo.cppm
modules/datastructures/: basics.cppm  default_value.cppm  range_basics.cppm
modules/datastructures/Array/: array.cppm
modules/datastructures/Deque/: deque.cppm  queue.cppm  stack.cppm
modules/datastructures/Iterator/: forward_iterator.cppm
modules/datastructures/LinkedList/: forward_list.cppm  list.cppm
modules/datastructures/Tree/: tree_selector.cppm
modules/datastructures/Tree/Adapter/: map.cppm  multimap.cppm  multiset.cppm  set.cppm
modules/datastructures/Tree/Array-based/: fenwick_tree.cppm  lazy_segment_tree.cppm  priority_queue.cppm  segment_tree.cppm
modules/datastructures/Tree/Base/: avl_tree.cppm  skip_list.cppm
modules/datastructures/Tree/Map/: map.cppm
modules/datastructures/Tree/Node-based/: avl_tree.cppm  red_black_tree.cppm
modules/datastructures/Tree/Set/: set.cppm
modules/datastructures/Tree/special/: fenwick_tree.cppm
modules/datastructures/Vector/: vector.cppm
modules/helper/: tree_helper.cppm
test/datastructures/: bench_array.cpp  bench_forward_list.cpp  bench_list.cpp  bench_vector.cpp  test_array.cpp  test_deque.cpp  test_forward_list.cpp  test_list.cpp  test_queue.cpp  test_set.cpp  test_stack.cpp  test_vector.cpp
test/datastructures/benchmark/: bench_array.cpp  bench_deque.cpp  bench_forward_list.cpp  bench_list.cpp  bench_queue.cpp  bench_set.cpp  bench_vector.cpp
test/datastructures/set/skip_list/: bench_compare_origin_numeric_clang.txt  bench_compare_origin_numeric_gcc.txt  bench_numeric_specialize_clang.txt  bench_numeric_specialize_gcc.txt  bench_o_vs_n.cpp  bench_origin_clang.txt  bench_origin_gcc.txt
trash/: Array.h  Circular_Linked_List.h  Doubly_Linked_List.h  Queue.h  Singly_Linked_List.h  Stack.h
